[gd_scene load_steps=8 format=3 uid="uid://6st5xpyya4c0"]

[ext_resource type="FontFile" uid="uid://cegl0tn0mr2xv" path="res://Assets/Fonts/alagard/alagard.ttf" id="1_8hps1"]
[ext_resource type="Script" uid="uid://cvsupyd3lnuhk" path="res://Scripts/death_screen.gd" id="1_rwas2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8hps1"]
content_margin_top = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwas2"]
bg_color = Color(0.17, 0.17, 0.17, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 5
shadow_offset = Vector2(0, 3.165)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tseak"]
bg_color = Color(0.17, 0.17, 0.17, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 5
shadow_offset = Vector2(0, 3.165)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amiou"]
bg_color = Color(0.17, 0.17, 0.17, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 5
shadow_offset = Vector2(0, 3.165)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vb6s7"]
bg_color = Color(0.17, 0.17, 0.17, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 5
shadow_offset = Vector2(0, 3.165)

[node name="DeathScreen" type="CanvasLayer"]
script = ExtResource("1_rwas2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.498039)

[node name="KillContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_top = 136.0
offset_right = 54.0
offset_bottom = 262.0
grow_horizontal = 2

[node name="KillCounter" type="Label" parent="KillContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.941176)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_8hps1")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_8hps1")

[node name="KillRecord" type="Label" parent="KillContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.941176)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_8hps1")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_8hps1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -20.0
offset_right = 214.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_8hps1")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_rwas2")
theme_override_styles/hover = SubResource("StyleBoxFlat_tseak")
theme_override_styles/pressed = SubResource("StyleBoxFlat_amiou")
theme_override_styles/normal = SubResource("StyleBoxFlat_vb6s7")
text = " Main Menu "

[node name="Restart" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_8hps1")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_rwas2")
theme_override_styles/hover = SubResource("StyleBoxFlat_tseak")
theme_override_styles/pressed = SubResource("StyleBoxFlat_amiou")
theme_override_styles/normal = SubResource("StyleBoxFlat_vb6s7")
text = "    Restart    "

[connection signal="pressed" from="HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Restart" to="." method="_on_restart_pressed"]
